# knkOs64

./: .bochsrc  .bochsrcGDB_noSMP  .bochsrcSMP_noGDB  .gitignore  CMakeLists.txt  build.sh  debug.rc  link.ld
.github/workflows/: bench.yml
doc/: pmemlayout.txt
include/: debug_regs.h  heap.h  idt.h  interrupts.h  io.h  kbhandler.h  kbscancodeset1.h  kernel_symbols.h  klog.h  memory.h  mmap.h  pic.h  pit.h  ring3.h  serial.h  textmodecolorcodes.h  textprint.h  typedefs.h  varargs.h  vmem.h
src/: debug_regs.c  heap.c  idt.c  interrupts.c  io.c  kbhandler.c  kbscancodeset1.c  kern.c  klog.c  memory.c  mmap.c  pic.c  pit.c  ring3.c  serial.c  textprint.c  varargs.c  vmem.c
src/sector1/: bootloader.asm  diskread.asm  print.asm
src/sector2+/: binaries.asm  cpuid.asm  detectmem.asm  extended.asm  gdt.asm  idt.asm  paging.asm  serial.asm  tss.asm
